# umud-challenge

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  timing_report.csv
data/: fit_mu.npy  gt_geometry_dual.csv  submission_s1_local_preview.csv
explainers/: block13-15-explained-for-beginners.md  block9-explained-for-beginners.md
research/: calibration_sprint.md  exclude_apo_mt_invalid.csv  log.md
scripts/: analyze_calibration.py  analyze_submissions.py  block10_eval.py  block8_encoders.py  build_apo_contour_picker_ablation_nb.py  build_apo_contrast_fill_nb.py  build_apo_geometry_guard_nb.py  build_apo_gray55_eval_nb.py  build_apo_gray55_line_eval_nb.py  build_apo_horiz_parallel_ablation_nb.py  build_apo_roi_crop_nb.py  build_baseline_nb.py  build_block4_mt_fail_viz_nb.py  build_block5_geom_ablation_nb.py  build_calibration_nb.py  build_corrected_smp_timing_nb.py  build_corrected_smp_train_nb.py  build_data_audit_nb.py  build_debug_phase3_nb.py  build_eval_resize_ablation_nb.py  build_eval_val_dice_nb.py  build_fasc_dilate_train_nb.py  build_geometry_nb.py  build_lakhindar_smp_timing_b3_nb.py  build_lakhindar_smp_timing_nb.py  build_mt_diagnosis_nb.py  build_no_contour_viz_nb.py  build_no_x_overlap_viz_nb.py  build_prep_apo_gray55_line_nb.py  build_prep_apo_gray55_nb.py  build_prep_apo_nb.py  build_prep_nb.py  build_submission_blend_block19_smp_cal_nb.py  build_submission_blend_cxs5_nb.py  build_submission_blend_nb.py  build_submission_block25_smp_pca_nb.py  build_submission_block29_corrected_nb.py  build_submission_block31_dilate_nb.py  (+53 more)
(+245 files in other folders)
