[project]
name = "umud-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastai>=2.8.7",
    "ipykernel>=7.3.0",
    "kaggle>=2.2.1",
    "kagglehub>=1.0.2",
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "numpy>=2.4.6",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "scipy>=1.17.1",
    "segmentation-models-pytorch>=0.5.0",
    "timm>=1.0.27",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]
